--- a/index.html
+++ b/index.html
@@ -2052,7 +2052,7 @@
                 <a href="#"><i class="fab fa-product-hunt"></i></a>
             </div>
             
-            <p>© 2023 ResumeGenius | Team AI Spark | Hackathon Winning Project</p>
+            <p>© 2025 ResumeGenius | Team AI Spark | Hackathon Project</p>
         </div>
     </footer>
 
