--- a/index.html
+++ b/index.html
@@ -2046,10 +2046,10 @@
             </p>
             
             <div class="social-links">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-product-hunt"></i></a>
+                <a href="https://x.com/Faizancoding"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/faizanakhtar123/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/faizanakhtar123"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/faizanakhtar123"><i class="fab fa-product-hunt"></i></a>
             </div>
             
             <p>© 2025 ResumeGenius | Team AI Spark | Hackathon Project</p>
