--- a/index.html
+++ b/index.html
@@ -1593,9 +1593,9 @@
                     <p class="team-member-role">AI Developer</p>
                     <p class="team-member-desc">Specializes in machine learning algorithms for resume analysis and optimization.</p>
                     <div class="team-social">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/faizanakhtar123/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/faizanakhtar123"><i class="fab fa-github"></i></a>
+                        <a href="https://x.com/Faizancoding"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
                 
@@ -1607,8 +1607,8 @@
                     <p class="team-member-role">Full-Stack Developer</p>
                     <p class="team-member-desc">Expert in building responsive web applications with modern technologies.</p>
                     <div class="team-social">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/mayank-goswami-b73a38329/"><i class="fab fa-linkedin"></i></a>
+                        <a href=""><i class="fab fa-github"></i></a>
                         <a href="#"><i class="fab fa-dev"></i></a>
                     </div>
                 </div>
@@ -1621,7 +1621,7 @@
                     <p class="team-member-role">UI/UX Designer</p>
                     <p class="team-member-desc">Creates intuitive user experiences with a focus on accessibility and usability.</p>
                     <div class="team-social">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/murli-rathi-5076ab329/"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-dribbble"></i></a>
                         <a href="#"><i class="fab fa-behance"></i></a>
                     </div>
